added code for rate-limit checking

--- a/OktaImport/App.config
+++ b/OktaImport/App.config
@@ -29,7 +29,7 @@
     
     <root>
       <!-- levels; ALL,DEBUG,INFO,WARN,ERROR,FATAL,OFF  -->
-      <level value="INFO" />
+      <level value="DEBUG" />
       <appender-ref ref="RollingLogFileAppender" />
     </root>
   </log4net>
